import React from 'react';
import { BrowserRouter } from 'react-router-dom';
import configureStore from 'redux-mock-store';
import waitForExpect from 'wait-for-expect';
import { Provider } from 'react-redux';
import renderer from 'react-test-renderer';
import NavBar, { NavBar as PlainNavBar } from '../../src/components/NavBar';
import { logout as logoutAction } from '../../src/actions/auth';

const mockStore = configureStore([]);

function getComponent(store) {
  return renderer.create(
    <Provider store={store}>
      <BrowserRouter>
        <NavBar />
      </BrowserRouter>
    </Provider>
  );
}

describe('navbar', () => {
  let store;
  let spy;

  beforeEach(() => {
    store = mockStore({
      currentUser: {}
    });
    spy = jest.spyOn(store, 'dispatch');
  });

  it('renders correctly', () => {
    const tree = getComponent(store).toJSON();
    expect(tree).toMatchSnapshot();
  });

  it('handles successful logout', async () => {
    const component = getComponent(store);
    const root = component.root;
    root.findByProps({ id: 'logoutButton' }).props.onClick();
    expect(component.toJSON()).toMatchSnapshot();

    await waitForExpect(() => {
      expect(spy).toHaveBeenCalledWith(logoutAction());
    });
  });

  it('handles add agent modal', async () => {
    const component = getComponent(store);
    const root = component.root;
    root.findByProps({ id: 'newAgentButton' }).props.onClick();
    expect(component.toJSON()).toMatchSnapshot();

    root.findByType(PlainNavBar).instance.closeAddAgentModal();
    expect(component.toJSON()).toMatchSnapshot();
  });

  it('toggles collapsed', () => {
    const component = getComponent(store);
    const root = component.root;
    const toggle = root.findByType('i')
    const menu = root.findByType(PlainNavBar)
    toggle.props.onClick();
    component.toJSON();
    expect(menu.instance.state['collapsed']).toBe(false)

    toggle.props.onClick();
    component.toJSON();
    expect(menu.instance.state['collapsed']).toBe(true)
  });

  it("render admin link for admins", () => {
    store = mockStore({
      currentUser: {
        username: 'admin',
        role: {
          name: 'admin'
        }
      }
    });
    let tree = getComponent(store).toJSON();
    expect(tree).toMatchSnapshot();
  });
});
